--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,20 @@ h1 {
   font-family: Norse-Bold;
 }
 
-body {
-  background-image: url('../michael-krahn-eGD69I3ODC4-unsplash.jpg');
-  /* background-size: contain;
-  background-repeat: no-repeat; */
+.main {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: 100vh;
 }
 
-.sign_up {
-  display:flex;
-  flex-direction: column;
-  padding: 5px;
+.left {
+  background-image: url('./images/michael-krahn-eGD69I3ODC4-unsplash\ \(1\).jpg');
+  width: 35vw;
+  margin: 0;
 }
 
-.btn {
-  color: blue
+.right {
+  display: flex;
+  justify-content: center;
 }
