--- a/styles.css
+++ b/styles.css
@@ -15,19 +15,23 @@ body {
   height: 100vh;
 }
 
-h1 {
+/* h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 
 .left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-image: url('./images/michael-krahn-eGD69I3ODC4-unsplash\ \(1\).jpg');
   width: 35vw;
   background-repeat: no-repeat;
   background-size: cover;
-  color: white;
+  color: black;
   font-family: Norse-Bold;
+  font-size: 25px;
 }
 
 .right {
@@ -71,6 +75,10 @@ input {
   width: 200px;
   border-color: #E5E7EB;
   height: 25px;
+}
+
+input:focus {
+  border: blue;
 }
 
 .bottom {
