--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,14 @@ input:focus {
   border: blue;
 }
 
+input:invalid {
+  border-color: red;
+}
+
+input:valid {
+  border-color: green;
+}
+
 .bottom {
   height: 30vh;
 }
@@ -100,5 +108,9 @@ input:focus {
   background-color: #596D48;
   border-radius: 5px;
   font-size: 25px;
+}
+
+#message {
+  display: none;
 }
 
