--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,8 @@ body {
   font-size: 25px;
   height: 25vh;
   width: 35vw;
-  background-color: #fafafa;
-  opacity: 0.6;
+  background-color: #ffffff;
+  opacity: 0.7;
 }
 
 .logo {
@@ -77,8 +77,7 @@ form {
   display: flex;
   flex-direction: row;
   margin-left: 50px;
-  justify-content: space-between;
-  width: 80%;
+  justify-content: space-around;
 }
 
 .form-div {
